Add is_complete and pprint

--- a/examples/about.ipynb
+++ b/examples/about.ipynb
@@ -190,6 +190,30 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "(LAMBDA (N)\n",
+       "  (BLOCK FIBONACCI\n",
+       "    (IF (<= N 1)\n",
+       "        1\n",
+       "        (+ (FIBONACCI (- N 2)) (FIBONACCI (- N 1))))))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(function-lambda-expression #'fibonacci)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/markdown": [
        "## wibble\n",
        "foo `quux`"
@@ -198,7 +222,7 @@
        "inline-value"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +803,7 @@
        "lisplogo_alien.svg"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +827,7 @@
        "inline-value"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +855,7 @@
        "LISP-ROCKS"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +875,7 @@
        "T"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +904,7 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "1.4.7"
+   "version": "1.4.8"
   }
  },
  "nbformat": 4,
