Add basic tests

--- a/examples/about.ipynb
+++ b/examples/about.ipynb
@@ -17,7 +17,10 @@
     {
      "data": {
       "text/plain": [
-       "\"Hello, World\""
+       "NIL"
+      ],
+      "text/x-common-lisp": [
+       "NIL"
       ]
      },
      "execution_count": 2,
@@ -28,13 +31,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\"Hello, World\" "
+      "Hello, World"
      ]
     }
    ],
    "source": [
-    "(print \"Hello, World\")"
+    "(format t \"Hello, World\")"
    ]
   },
   {
@@ -45,6 +47,9 @@
     {
      "data": {
       "text/plain": [
+       "14"
+      ],
+      "text/x-common-lisp": [
        "14"
       ]
      },
@@ -75,6 +80,9 @@
      "data": {
       "text/plain": [
        "(:JSOWN)"
+      ],
+      "text/x-common-lisp": [
+       "(:JSOWN)"
       ]
      },
      "execution_count": 4,
@@ -103,6 +111,9 @@
     {
      "data": {
       "text/plain": [
+       "\"{\\\"foo\\\":\\\"bar\\\"}\""
+      ],
+      "text/x-common-lisp": [
        "\"{\\\"foo\\\":\\\"bar\\\"}\""
       ]
      },
@@ -149,6 +160,9 @@
      "data": {
       "text/plain": [
        "FIBONACCI"
+      ],
+      "text/x-common-lisp": [
+       "FIBONACCI"
       ]
      },
      "execution_count": 7,
@@ -172,6 +186,9 @@
      "data": {
       "text/plain": [
        "21"
+      ],
+      "text/x-common-lisp": [
+       "21"
       ]
      },
      "execution_count": 8,
@@ -191,6 +208,13 @@
     {
      "data": {
       "text/plain": [
+       "(LAMBDA (N)\n",
+       "  (BLOCK FIBONACCI\n",
+       "    (IF (<= N 1)\n",
+       "        1\n",
+       "        (+ (FIBONACCI (- N 2)) (FIBONACCI (- N 1))))))"
+      ],
+      "text/x-common-lisp": [
        "(LAMBDA (N)\n",
        "  (BLOCK FIBONACCI\n",
        "    (IF (<= N 1)\n",
@@ -846,12 +870,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "LISP rocks? (yes or no) yes\n"
      ]
     },
     {
      "data": {
       "text/plain": [
+       "LISP-ROCKS"
+      ],
+      "text/x-common-lisp": [
        "LISP-ROCKS"
       ]
      },
@@ -872,6 +900,9 @@
     {
      "data": {
       "text/plain": [
+       "T"
+      ],
+      "text/x-common-lisp": [
        "T"
       ]
      },
@@ -904,7 +935,7 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "1.4.8"
+   "version": "1.4.7"
   }
  },
  "nbformat": 4,
