Add more examples

--- a/examples/about.ipynb
+++ b/examples/about.ipynb
@@ -10,10 +10,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All stream output is captured and displayed in the notebook interface."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NIL"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "data": {
       "text/plain": [
@@ -30,10 +47,25 @@
      "text": [
       "Hello, World"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Goodbye, cruel World."
+     ]
     }
    ],
    "source": [
-    "(format t \"Hello, World\")"
+    "(format t \"Hello, World\")\n",
+    "(format *error-output* \"Goodbye, cruel World.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluation results are displayed directory in the notebook."
    ]
   },
   {
@@ -54,6 +86,13 @@
    ],
    "source": [
     "(+ 2 3 4 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All Lisp code is value, including calls to quicklisp."
    ]
   },
   {
@@ -95,6 +134,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The serialized JSON will represented as a Lisp string."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -113,6 +159,13 @@
    "source": [
     "(jsown:to-json\n",
     "    (jsown:new-js (\"foo\" \"bar\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Error conditions will be captured and a backtrace will be sent to `*error-output*`"
    ]
   },
   {
@@ -140,6 +193,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "New functions can be defined. The default namespace is `COMMON-LISP-USER`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -163,6 +223,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The seventh element of everybody's favorite sequence."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -180,6 +247,13 @@
    ],
    "source": [
     "(fibonacci 7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "S-Expressions will be displayed using `pprint`."
    ]
   },
   {
@@ -204,6 +278,13 @@
    ],
    "source": [
     "(function-lambda-expression #'fibonacci)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rich text and images can be displayed using inline values using the `inline-result`, `html`, `jpeg`, `latex`, `markdown`, `png`, `svg` or `text` functions. "
    ]
   },
   {
@@ -234,6 +315,40 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$R_{\\mu \\nu} - \\tfrac{1}{2}R \\, g_{\\mu \\nu} + \\Lambda g_{\\mu \\nu} =\n",
+       "               8 \\pi G c^{-4} T_{\\mu \\nu}$$"
+      ],
+      "text/plain": [
+       "inline-value"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(jupyter:latex \"$$R_{\\\\mu \\\\nu} - \\\\tfrac{1}{2}R \\\\, g_{\\\\mu \\\\nu} + \\\\Lambda g_{\\\\mu \\\\nu} =\n",
+    "               8 \\\\pi G c^{-4} T_{\\\\mu \\\\nu}$$\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "External files can be rendered using the `file`, `gif-file`, `jpeg-file`, `png-file`, `ps-file`, `svg-file` functions. \n",
+    "\n",
+    "The MIME type will be automatically determined in the case of a call to `file`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +917,7 @@
        "lisplogo_alien.svg"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,28 +927,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$$R_{\\mu \\nu} - \\tfrac{1}{2}R \\, g_{\\mu \\nu} + \\Lambda g_{\\mu \\nu} =\n",
-       "               8 \\pi G c^{-4} T_{\\mu \\nu}$$"
-      ],
-      "text/plain": [
-       "inline-value"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "(jupyter:latex \"$$R_{\\\\mu \\\\nu} - \\\\tfrac{1}{2}R \\\\, g_{\\\\mu \\\\nu} + \\\\Lambda g_{\\\\mu \\\\nu} =\n",
-    "               8 \\\\pi G c^{-4} T_{\\\\mu \\\\nu}$$\")"
+    "Calls to `yes-or-no-p` will result in a `input_request` to the user."
    ]
   },
   {
@@ -871,8 +968,11 @@
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "For the record Lisp **rocks**!"
+      ],
       "text/plain": [
-       "T"
+       "inline-value"
       ]
      },
      "execution_count": 14,
@@ -881,7 +981,91 @@
     }
    ],
    "source": [
-    "lisp-rocks"
+    "(jupyter:markdown (format nil \"For the record Lisp ~A\" (if lisp-rocks \"**rocks**!\" \"**does not** rock.\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output send to `*query-io*` will result also result in an input_request to the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ASK"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun ask (prompt)\n",
+    "    (format *query-io* prompt)\n",
+    "    (finish-output *query-io*)\n",
+    "    (read-line *query-io*))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your quest? To determine the airspeed of an unladen swallow.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "QUEST"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defvar quest (ask \"What is your quest? \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NIL"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your quest is: To determine the airspeed of an unladen swallow."
+     ]
+    }
+   ],
+   "source": [
+    "(format t \"Your quest is: ~A\" quest)"
    ]
   },
   {
