Add more documentation

--- a/examples/about.ipynb
+++ b/examples/about.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CL-Jupyter\n",
+    "# common-lisp-jupyter\n",
     "\n",
     "A Common Lisp kernel for Jupyter."
    ]
@@ -904,7 +904,7 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "1.4.7"
+   "version": "1.4.8"
   }
  },
  "nbformat": 4,
