--- a/examples/about.ipynb
+++ b/examples/about.ipynb
@@ -27,7 +27,7 @@
        "NIL"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -37,7 +37,7 @@
        "NIL"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -79,7 +79,7 @@
        "14"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
        "(:JSOWN)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -151,7 +151,7 @@
        "\"{\\\"foo\\\":\\\"bar\\\"}\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
        "FIBONACCI"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
        "21"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
        "        (+ (FIBONACCI (- N 2)) (FIBONACCI (- N 1))))))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
        "inline-value"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
        "inline-value"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
        "lisplogo_alien.svg"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
        "LISP-ROCKS"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
        "inline-value"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1002,7 @@
        "ASK"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1032,7 @@
        "QUEST"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1052,7 @@
        "NIL"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1066,6 +1066,95 @@
    ],
    "source": [
     "(format t \"Your quest is: ~A\" quest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`jupyter:clear` will clear the output of the current."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "10 "
+     ]
+    }
+   ],
+   "source": [
+    "(loop\n",
+    "    for i from 1 to 10\n",
+    "    do (sleep 0.25)\n",
+    "    do (jupyter:clear t)\n",
+    "    do (print i)\n",
+    "    do (finish-output *standard-output*)\n",
+    "    finally (return :no-output))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`:no-output` can be used to suppress the output. Defining a reader macro can make this easier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NO-OUTPUT-READER"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "T"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun no-output-reader (stream char)\n",
+    "   (declare (ignore char))\n",
+    "   (list (quote progn) (read stream t nil t) :no-output))\n",
+    "\n",
+    "(set-macro-character #\\~ #'no-output-reader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No output returned!"
+     ]
+    }
+   ],
+   "source": [
+    "~(format t \"No output returned!\")"
    ]
   },
   {
