--- a/examples/widgets.ipynb
+++ b/examples/widgets.ipynb
@@ -28,7 +28,69 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "D7946A77-11FF-43A5-80D7-B84BD5C51C9A",
+       "model_id": "34132777-919A-4A37-8EDC-30F78941B647",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "SIMPLE-STYLE-WARNING: \n",
+      "  slot names with the same SYMBOL-NAME but different SYMBOL-PACKAGE (possible\n",
+      "package problem) for class\n",
+      "#<JUPYTER-WIDGETS::TRAIT-METACLASS JUPYTER-WIDGETS:LAYOUT>:\n",
+      "    (JUPYTER::DISPLAY JUPYTER-WIDGETS::DISPLAY)\n"
+     ]
+    }
+   ],
+   "source": [
+    "(progn\n",
+    "    (defvar a-button (make-widget 'button :description \"Click me\"))\n",
+    "\n",
+    "    (defmethod on-button-click ((w (eql a-button)))\n",
+    "        (setf (widget-description w) \"I've been clicked.\"))\n",
+    "\n",
+    "    a-button)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"aquamarine\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(setf (widget-button-color (widget-style a-button)) \"aquamarine\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1423340C-141E-4329-83E5-2F1BF341CD66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,12 +104,92 @@
    ],
    "source": [
     "(progn\n",
-    "    (defvar a-button (make-button \"Click me\"))\n",
-    "\n",
-    "    (defmethod on-button-click ((w (eql a-button)))\n",
-    "        (setf (button-description w) \"I've been clicked.\"))\n",
-    "\n",
-    "    a-button)"
+    "    (defvar a-int-slider (make-widget 'int-slider))\n",
+    "    a-int-slider)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(widget-value a-int-slider)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(setf (widget-value a-int-slider) 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"vertical\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(setf (widget-orientation a-int-slider) \"vertical\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7FC9172C-757A-4516-9F6C-E8397D7DF961",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a-int-slider"
    ]
   },
   {
