Update widget notebook

--- a/examples/widgets.ipynb
+++ b/examples/widgets.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "(progn\n",
-    "    (defvar a-button (make-widget 'button :description \"Click me\"))\n",
+    "    (defvar a-button (make-instance 'button :description \"Click me\"))\n",
     "\n",
     "    (defmethod on-button-click ((w (eql a-button)))\n",
     "        (setf (widget-description w) \"I've been clicked.\"))\n",
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "(progn\n",
-    "    (defvar a-int-slider (make-widget 'int-slider))\n",
+    "    (defvar a-int-slider (make-instance 'int-slider))\n",
     "    a-int-slider)"
    ]
   },
