Update julia notebook

--- a/examples/julia.ipynb
+++ b/examples/julia.ipynb
@@ -2,83 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "; Loading \"alexandria\"\n",
-      "\n",
-      "To load \"png\":\n",
-      "  Load 1 ASDF system:\n",
-      "    png\n",
-      "\n",
-      "; Loading \"png\"\n",
-      "\n",
-      "To load \"iterate\":\n",
-      "  Load 1 ASDF system:\n",
-      "    iterate\n",
-      "\n",
-      "; Loading \"iterate\"\n",
-      "\n",
-      "To load \"flexi-streams\":\n",
-      "  Load 1 ASDF system:\n",
-      "    flexi-streams\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(:ALEXANDRIA :PNG :ITERATE :FLEXI-STREAMS)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "T"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "T"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "T"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "; Loading \"flexi-streams\"\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(ql:quickload '(:alexandria :png :iterate :flexi-streams))\n",
     "(use-package :alexandria)\n",
@@ -88,20 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "JULIA-COUNT"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(defun julia-count (z c &key (max 255))\n",
     "    (iter\n",
@@ -115,90 +30,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "#<STANDARD-CLASS COMMON-LISP-USER::JULIA-WIDGET>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "JW"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "*UPDATE-THREAD*"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "MAKE-JULIA"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "UPDATE"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "#<SB-THREAD:THREAD \"Anonymous thread\" RUNNING {10044C4263}>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(defclass julia-widget ()\n",
     "    ((image :reader julia-image\n",
-    "            :initform (make-widget 'image :width 640 :height 640))\n",
+    "            :initform (make-instance 'image :width 640 :height 640))\n",
     "     (x :reader julia-x\n",
-    "        :initform (make-widget 'float-text :value 0 :description \"x\"))\n",
+    "        :initform (make-instance 'float-text :value 0 :description \"x\"))\n",
     "     (y :reader julia-y\n",
-    "        :initform (make-widget 'float-text :value 0 :description \"y\"))\n",
+    "        :initform (make-instance 'float-text :value 0 :description \"y\"))\n",
     "     (size :reader julia-size\n",
-    "           :initform (make-widget 'float-text :value 4 :description \"size\"))\n",
+    "           :initform (make-instance 'float-text :value 4 :description \"size\"))\n",
     "     (ca :reader julia-ca\n",
-    "         :initform (make-widget 'float-text :value -0.8 :step 0.001 :description \"ca\"))\n",
+    "         :initform (make-instance 'float-text :value -0.8 :step 0.001 :description \"ca\"))\n",
     "     (cb :reader julia-cb\n",
-    "         :initform (make-widget 'float-text :value 0.156 :step 0.001 :description \"cb\"))\n",
+    "         :initform (make-instance 'float-text :value 0.156 :step 0.001 :description \"cb\"))\n",
     "     (progress :reader julia-progress\n",
-    "               :initform (make-widget 'int-progress :max 640 :description \"Complete\"))\n",
+    "               :initform (make-instance 'int-progress :max 640 :description \"Complete\"))\n",
     "     (controls :reader julia-controls\n",
-    "               :initform (make-widget 'v-box))\n",
+    "               :initform (make-instance 'v-box))\n",
     "     (container :reader julia-container\n",
-    "                :initform (make-widget 'h-box))))\n",
+    "                :initform (make-instance 'h-box))))\n",
     "\n",
     "(defvar jw (make-instance 'julia-widget))\n",
     "\n",
@@ -256,24 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52120af6a4c7460995e38ded1628485d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(julia-container jw)"
    ]
@@ -298,9 +137,9 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "1.5.0"
+   "version": "1.5.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
