Add thread safe queue and on-click handler

--- a/examples/widgets.ipynb
+++ b/examples/widgets.ipynb
@@ -2,26 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "T"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(use-package :jupyter-widgets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A-BUTTON"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dbc9a0f5b6104cd1985d973bc9900d0b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "(progn\n",
-    "    (defvar a-button (make-instance 'button :description \"Click me\"))\n",
+    "(defvar a-button (make-instance 'button :description \"Click me\" :on-click (lambda (w) (setf (widget-description w) \"I've been clicked.\"))))\n",
     "\n",
-    "    (defmethod on-button-click ((w (eql a-button)))\n",
-    "        (setf (widget-description w) \"I've been clicked.\"))\n",
-    "\n",
-    "    a-button)"
+    "a-button"
    ]
   },
   {
@@ -91,7 +123,7 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "1.5.6"
+   "version": "2.0.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
